fix spacing

--- a/client/src/app/components/ng-bootstrap/ratings/rating/rating.component.scss
+++ b/client/src/app/components/ng-bootstrap/ratings/rating/rating.component.scss
@@ -1,4 +1,4 @@
 #spacing {
   display: inline-block;
-  width: 1rem;
+  width: .7rem;
 }
